--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,20 @@
   margin: 0;
   padding: 0;
 }
+
+@font-face {
+  font-family: new_athletic_m54regular;
+  src: url(./fonts/New-Athletic-M54.ttf);
+}
+
+@font-face {
+  font-family: NeoSansBlackTR;
+  src: url(./fonts/NeoSansBlackTR.ttf);
+}
+
+body {
+  font-family: new_athletic_m54regular;
+}
 .page-container {
   position: relative;
   max-width: 1200px;
@@ -14,13 +28,12 @@
 .fan-leaderboard-text-container {
   display: flex;
   justify-content: center;
-  padding-left: 77px;
 }
 .horizontal-line {
-  width: 170px;
+  width: 235px;
   height: 1px;
   background: #fff;
-  margin-top: 33px;
+  margin-top: 37px;
 }
 .horizontal-line:nth-of-type(1) {
   margin-right: 13px;
@@ -30,81 +43,91 @@
 }
 .fan-leaderboard-text {
   text-align: center;
-  font-size: 30px;
+  font-size: 34px;
   color: #fff;
-  font-family: "Patua One", cursive;
-  margin-top: 15px;
-  letter-spacing: 1.25px;
+  font-family: new_athletic_m54regular;
+  margin-top: 10px;
+  letter-spacing: 0.5px;
 }
 
 .leaderboard-container-wrapper {
   width: 100%;
   display: flex;
   justify-content: center;
+  margin-top: 17px;
 }
 .leaderboard-container {
-  width: 580px;
-  display: flex;
-  flex-wrap: wrap;
-  column-gap: 33px;
-  row-gap: 20px;
-  margin-top: 57px;
-  margin-left: 60px;
+  width: 670px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 29px;
+  place-items: center;
 }
 .leaderboard-card {
   position: relative;
-  width: 170px;
-  height: 170px;
+  width: 200px;
+  height: 200px;
   background-image: url(./images/leaderboard-item-bacground.png);
   background-repeat: no-repeat;
+  background-size: cover;
   border-radius: 6px;
 }
 .leaderboard-card-number-circle {
   position: absolute;
-  width: 35px;
-  height: 35px;
-  border-radius: 17.5px;
-  background: #ff573c;
-  margin-left: 0.5px;
-  margin-top: -3px;
-}
-.leaderboard-card-number-circle p {
-  padding: 8px 0 0 13px;
+  width: 44px;
+  height: 44px;
+  border-radius: 22px;
+  background: #ea6b23;
+  margin-left: 0.1rem;
+  margin-top: -0.4rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   color: #fff;
+  font-size: 28px;
+}
+.leaderboard-card-logo {
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 .leaderboard-card-logo > img {
   width: 50px;
   margin-top: 22px;
-  padding-left: 55px;
 }
 .leaderboard-card-text {
   font-family: "Patua One", cursive;
   color: #000;
   letter-spacing: 0;
-  font-size: 14px;
-  margin-top: 8px;
+  font-size: 15px;
+  margin-top: 16.5px;
   text-align: center;
-  font-weight: bold;
+  font-weight: 600;
+  letter-spacing: 0.5px;
 }
 .leaderboard-card-vertical-line {
   position: absolute;
-  left: 85px;
-  bottom: 0;
+  left: 99px;
+  bottom: 14px;
   width: 2px;
-  height: 40px;
+  height: 49.5px;
   background: #adadad;
 }
 .leaderboard-card-stats {
   display: flex;
   height: 40px;
   font-size: 12px;
-  margin-top: 29px;
+  margin-top: 25px;
   text-align: center;
 }
 .leaderboard-card-number-values {
-  font-size: 18px;
-  font-weight: bold;
-  font-family: Calibri;
+  font-size: 20.5px;
+  font-family: NeoSansBlackTR;
+}
+.leaderboard-card-donated-amount-and-fans-text {
+  font-family: "Open Sans", sans-serif;
+  margin-top: 4px;
+  font-size: 12px;
 }
 .leaderboard-card-donated-col {
   width: 50%;
@@ -118,19 +141,80 @@
   justify-content: center;
 }
 .ribbon-text {
-  width: 220px;
+  position: absolute;
+  bottom: 25px;
+  width: 250px;
   text-align: center;
-  margin-top: 54.5px;
   z-index: 20;
   color: #fff;
   font-family: Calibri;
   font-weight: bold;
-  font-size: 18.5px;
+  font-size: 16px;
 }
 .ribbon-img {
   position: absolute;
-  width: 320px;
-  height: 66px;
-  bottom: 20px;
+  width: 390px;
+  height: 60px;
+  bottom: 6px;
   z-index: 10;
+}
+
+@media (max-width: 768px) {
+  .page-container {
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: 20%;
+  }
+
+  .leaderboard-container {
+    grid-template-columns: repeat(1, minmax(170px, 1fr));
+  }
+  .leaderboard-card {
+    width: 267px;
+    height: 267px;
+  }
+  .leaderboard-card-number-circle {
+    width: 58px;
+    height: 58px;
+    border-radius: 29px;
+    margin-left: 2px;
+    margin-top: -7.6px;
+    font-size: 32px;
+  }
+  .leaderboard-card-logo > img {
+    width: 60px;
+    margin-top: 33px;
+  }
+  .leaderboard-card-stats {
+    margin-top: 23px;
+  }
+  .leaderboard-card-text {
+    font-size: 17px;
+    margin-top: 13px;
+  }
+  .leaderboard-card-number-values {
+    font-size: 24px;
+  }
+  .leaderboard-card-donated-amount-and-fans-text {
+    font-size: 15px;
+  }
+  .leaderboard-card-vertical-line {
+    height: 60px;
+    bottom: 53px;
+    left: 130px;
+  }
+  .leaderboard-container {
+    margin-bottom: 130px;
+  }
+  .ribbon-img {
+    width: 300px;
+    height: 62px;
+    bottom: 30px;
+  }
+  .ribbon-text {
+    width: 242px;
+    font-size: 17px;
+    bottom: 48px;
+  }
 }
