--- a/styles.css
+++ b/styles.css
@@ -142,19 +142,20 @@ body {
 }
 .ribbon-text {
   position: absolute;
-  bottom: 25px;
-  width: 250px;
+  bottom: 32.5px;
+  width: 350px;
   text-align: center;
   z-index: 20;
   color: #fff;
-  font-family: Calibri;
+  font-family: new_athletic_m54regular;
+  letter-spacing: 2px;
   font-weight: bold;
-  font-size: 16px;
+  font-size: 24px;
 }
 .ribbon-img {
   position: absolute;
-  width: 390px;
-  height: 60px;
+  /* width: 390px;
+  height: 60px; */
   bottom: 6px;
   z-index: 10;
 }
@@ -192,6 +193,7 @@ body {
   .leaderboard-card-text {
     font-size: 17px;
     margin-top: 13px;
+    font-family: new_athletic_m54regular;
   }
   .leaderboard-card-number-values {
     font-size: 24px;
