--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,9 @@
   margin: 0;
   padding: 0;
 }
+a {
+  text-decoration: none;
+}
 
 @font-face {
   font-family: new_athletic_m54regular;
@@ -19,7 +22,8 @@ body {
 .page-container {
   position: relative;
   max-width: 1200px;
-  height: 100vh;
+  height: 100%;
+  min-height: 100vh;
   margin: auto;
   background-image: url("./images/hitter-on-baseball-field.jpg");
   background-repeat: no-repeat;
@@ -137,13 +141,15 @@ body {
 }
 
 .ribbon-container {
+  position: relative;
   display: flex;
   justify-content: center;
+  margin-top: 53px;
+  padding-bottom: 55px;
 }
 .ribbon-text {
-  position: absolute;
-  bottom: 32.5px;
   width: 350px;
+  margin-top: 4.5px;
   text-align: center;
   z-index: 20;
   color: #fff;
@@ -154,10 +160,8 @@ body {
 }
 .ribbon-img {
   position: absolute;
-  /* width: 390px;
-  height: 60px; */
-  bottom: 6px;
-  z-index: 10;
+  width: 485px;
+  height: 90px;
 }
 
 @media (max-width: 768px) {
@@ -209,14 +213,18 @@ body {
   .leaderboard-container {
     margin-bottom: 130px;
   }
+  .ribbon-container {
+    margin-top: -89px;
+    padding-bottom: 73px;
+  }
   .ribbon-img {
     width: 300px;
     height: 62px;
-    bottom: 30px;
   }
   .ribbon-text {
-    width: 242px;
-    font-size: 17px;
-    bottom: 48px;
+    width: 205px;
+    top: 6px;
+    left: 36%;
+    font-size: 14px;
   }
 }
